:recycle: refactor: EmptySpace null 값 들어올 때 처리